<resources>
    <string name="app_name">Rapido</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">your_email@email.com</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="date_hint">Press for a date</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="full_name_hint">John Smith</string>
    <string name="street_hint">123 Street Dr.</string>
    <string name="city_hint">Orlando</string>
    <string name="state_hint">FL</string>
    <string name="zipcode_hint">38201</string>
    <string name="name_title">Name:</string>
    <string name="email_title">Email:</string>
    <string name="password_title">Password:</string>
    <string name="available_title">Available?</string>
    <string name="rate_rapido_link">Rate Rapido</string>
    <string name="contact_us_link">Contact Us</string>
    <string name="terms_of_service_link">Terms of Service</string>
    <string name="privacy_policy_link">Privacy Policy</string>
    <string name="change_password_title">Change Password</string>
    <string name="logout_menu">Logout</string>
    <string name="change_dialog">Edit</string>
    <string name="ok_button">Ok</string>
    <string name="submit_button">Submit</string>
    <string name="cancel_button">Cancel</string>
    <string name="success">Success!</string>
    <string name="name_error">You must have a first and a last name!</string>
    <string name="email_error">You must enter a valid email address!</string>
    <string name="password_error">Password incorrect!</string>
    <string name="password_matching_error">Passwords do not match!</string>
    <string name="phone_number_error">Please enter a valid phone number!</string>
    <string name="general_entry_error">Invalid entry!</string>
    <string name="hire_tab">Hire</string>
    <string name="profile_tab">Profile</string>
    <string name="facebook_app_id">869344706459126</string>
    <string name="category_prompt">Please choose a category:</string>
    <string name="action_settings">Settings</string>
</resources>
